Update to C# 11 and move to file-scoped namespaces

--- a/MalSCCM/MalSCCM.csproj
+++ b/MalSCCM/MalSCCM.csproj
@@ -8,9 +8,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>MalSCCM</RootNamespace>
     <AssemblyName>MalSCCM</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
